--- a/css/main.css
+++ b/css/main.css
@@ -312,7 +312,7 @@ p {
   z-index: 1;
   display: flex;
   transition-property: transform;
-  box-sizing: content-box;
+  /* box-sizing: content-box; */
 }
 
 .swiper-slide {
