--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 991px) {
-  .w-nav-menu {
+  .w-nav-menu{
     display: none;
   }
 }
@@ -81,6 +81,7 @@
   }
 }
 @media screen and (max-width: 991px) {
+
   h1 {
     font-size: 32.44px;
     line-height: 48px;
@@ -254,7 +255,8 @@
     right: 0;
     bottom: 0;
     z-index: 9999;
-    display: none;
+    display: block;
+    opacity: 1;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
