--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,8 @@ body {
 
 
 
+
+
 .c-hero, .cc-flex {
   -webkit-box-align: center;
   justify-content: center;
@@ -339,9 +341,11 @@ a {
 
 .lineswrap {
   overflow: hidden;
+  background-color: aqua;
 }
 
 .line {
-  opacity: 1;
+  opacity: 0;
   transform: translate3d(0%,0% ,0%) scale(1,1,1,);
+  background-color: red;
 }
