--- a/css/animation.css
+++ b/css/animation.css
@@ -34,6 +34,20 @@
   animation-timing-function: ease-in;
 }
 
+#ring-animation {
+  animation: alternate infinite;
+  animation-name: showRing;
+  animation-duration: 2s;
+  animation-timing-function: ease-in;
+}
+
+@keyframes showRing {
+  
+  100% {
+    transform: translateY(10%);
+  }
+}
+
 
 /* ------------>>>>>>> First cards <<<<<<<------------- */
 
@@ -92,6 +106,9 @@
     transform: translateX(0);
     opacity: 1;
   }
+}
+
+#first-ball { 
 }
 
 
@@ -393,5 +410,28 @@
   @keyframes dash {
     to {
       stroke-dashoffset: 0;
+    }
+  }
+
+  #ball {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    animation: moving 5s linear infinite;
+  }
+
+  @keyframes moving {
+    0% {
+      top: 0;
+      left: 0;
+    }
+
+    25% {
+      top: 0;
+      left: 400px;
+      background: cyan;
     }
   }
