--- a/css/animation.css
+++ b/css/animation.css
@@ -34,7 +34,7 @@
   animation-timing-function: ease-in;
 }
 
-#ring-animation {
+/* #ring-animation {
   animation: alternate infinite;
   animation-name: showRing;
   animation-duration: 2s;
@@ -46,7 +46,185 @@
   100% {
     transform: translateY(10%);
   }
+} */
+
+.ring {
+  position: absolute;
+  right: 52.45%;
+  top: 37%;
+  z-index: 25;
 }
+
+
+
+.ring2 {
+  position: absolute;
+  right: 23.1%;
+  top: 82%;
+}
+
+.ring3 {
+  position: absolute;
+  right: 49.5%;
+  top: 73%;
+}
+
+.ring4 {
+  position: absolute;
+  right: 25.8%;
+  top: 56%;
+  z-index: 4;
+}
+
+.ring5 {
+  position: absolute;
+  right: 7.5%;
+  top: 34%;
+  z-index: 4;
+}
+
+.cream-ball {
+  position: absolute;
+  left: 18%;
+  width: 20%;
+  height: 20%;
+  animation: move 1s linear forwards;
+}
+
+@keyframes move {
+  0%   {
+      top: -10%;
+  }
+  100% {
+    top: 60%;
+  }
+}
+
+.yellow-ball {
+  position: absolute;
+  left: 44.8%;
+  width: 10.2%;
+  height: 10.2%;
+  animation: moved 2s linear forwards;
+}
+
+@keyframes moved {
+  0%   {
+      top: -70%;
+  }
+  100% {
+    top: 75%;
+  }
+}
+
+.blue-ball {
+  position: absolute;
+  left: 45.5%;
+  width: 5%;
+  height: 5%;
+  animation: moveed 1s linear forwards;
+}
+
+@keyframes moveed {
+  0%   {
+      top: -5%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+
+.red-ball {
+  position: absolute;
+  left: 14.5%;
+  width: 26%;
+  height: 26%;
+  animation: movered 3s linear forwards;
+}
+
+@keyframes movered {
+  0%   {
+      top: -150%;
+  }
+  100% {
+    top: 20%;
+    opacity: 1;
+  }
+}
+
+.grey-ball {
+  position: absolute;
+  left: 42%;
+  width: 15%;
+  height: 15%;
+  animation: movegrey 4s linear forwards;
+}
+
+@keyframes movegrey {
+  0%   {
+      top: -200%;
+  }
+  100% {
+    top: 46%;
+  }
+}
+
+.white-ball {
+  position: absolute;
+  left: 60%;
+  width: 7%;
+  height: 7%;
+  animation: movewhite 6s linear forwards;
+}
+
+@keyframes movewhite {
+  0%   {
+      top: -250%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+
+.redmain {
+  position: absolute;
+  left: 60%;
+  width: 13%;
+  height: 13%;
+  animation: redmovemain 6s linear forwards;
+}
+
+@keyframes redmovemain {
+  0%   {
+      top: -250%;
+  }
+  100% {
+    top: 25%;
+  }
+}
+
+.purple-ball {
+  position: absolute;
+  left: 75%;
+  width: 10%;
+  height: 10%;
+  animation: movepurple 8s linear forwards;
+}
+
+@keyframes movepurple {
+  0%   {
+      top: -650%;
+  }
+  100% {
+    top: 100%;
+  }
+}
+
+.all-color-ring {
+  position: absolute;
+  animation: whole 5s linear forwards;
+}
+
 
 
 /* ------------>>>>>>> First cards <<<<<<<------------- */
