--- a/css/remain/full-remain.css
+++ b/css/remain/full-remain.css
@@ -662,12 +662,13 @@ p {
   right: -10%;
   width: 36vw;
 }
+
 .c-bubble__wrapper.cc-compliance.cc-tranparent {
   left: 0;
   top: auto;
   right: auto;
   bottom: -15%;
-  width: 36vw;
+  /* width: 36vw; */
   opacity: 0.2;
 }
 .c-tag__holder {
