--- a/css/Homepage/main.css
+++ b/css/Homepage/main.css
@@ -527,7 +527,7 @@ h2 {
   height: 2.2vw;
 }
 
-.c-stats__bubble-holder, .cc-orange {
+.c-stats__bubble-holder {
   inset: -16% 49% auto auto;
   max-width: 50px;
 }
