--- a/css/Homepage/main.css
+++ b/css/Homepage/main.css
@@ -522,10 +522,10 @@ h2 {
   z-index: -1;
 }
 
-.c-stats__bubble-holder, .cc-orange, .cc-1 {
+/* .c-stats__bubble-holder, .cc-orange, .cc-1 {
   width: 2.2vw;
   height: 2.2vw;
-}
+} */
 
 .c-stats__bubble-holder {
   inset: -16% 49% auto auto;
