Complete the website with the animation too.

--- a/css/Homepage/animation.css
+++ b/css/Homepage/animation.css
@@ -121,6 +121,10 @@
   }
 }
 
+.myFirst-redball {
+  
+}
+
 .blue-ball {
   position: absolute;
   left: 45.5%;
@@ -635,3 +639,6 @@
       background: cyan;
     }
   }
+
+
+
