Change the files accroding to need.

--- a/src/components/organisms/circle.css
+++ b/src/components/organisms/circle.css
@@ -1,17 +1,3 @@
-section {
-  display: block;
-}
-img {
-  border: 0;
-  vertical-align: middle;
-  display: inline-block;
-  max-width: 180%;
-}
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
 h2 {
   margin-top: 10px;
   margin-bottom: 24px;
@@ -195,8 +181,8 @@ p {
   border-radius: 17px;
   background-color: rgba(0, 154, 255, 0.09);
 }
-.c-info__holder.cc-green {
-  background-color: rgba(53, 200, 159, 0.09);
+.c-info__holder.cc-ruby {
+  background-color: rgba(255, 40, 104, 0.09);
 }
 .c-info__icon {
   margin-right: 20px;
@@ -207,8 +193,8 @@ p {
 .heading-7 {
   color: #009aff;
 }
-.heading-7.cc-green {
-  color: #35c89f;
+.heading-7.cc-ruby {
+  color: #ff2868;
 }
 .no-padding {
   margin-top: 0;
@@ -249,6 +235,147 @@ p {
 .c-bg-bubble.bt-left.smaller.cc-pink {
   background-color: #f8b8c3;
 }
-.c-bg-bubble.cc-turquoise {
-  background-color: #43dbdb;
+.c-bg-bubble.cc-ruby {
+  background-color: #ff2868;
+}
+@media screen and (max-width: 991px) {
+  h2 {
+    font-size: 28.83px;
+    line-height: 40px;
+  }
+  .c-ctn {
+    max-width: 960px;
+    min-width: 740px;
+  }
+  .c-ctn.cc-70 {
+    max-width: 992px;
+    min-width: 740px;
+  }
+  .c-ctn.cc-75.desktop {
+    max-width: 992px;
+    min-width: 740px;
+  }
+  .c-flex__cover {
+    min-height: 500px;
+    padding-top: 0;
+  }
+  .c-content_wrapper {
+    padding-bottom: 0;
+    padding-left: 0;
+  }
+  .c-text__content {
+    max-width: 40ch;
+    min-width: 40ch;
+  }
+  .p-top__32 {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .c-ctn {
+    max-width: 767px;
+    min-width: 440px;
+  }
+  .c-ctn.cc-absolute {
+    position: static;
+  }
+  .c-ctn.cc-70 {
+    width: 85%;
+    max-width: 760px;
+    min-width: 370px;
+  }
+  .c-ctn.cc-75 {
+    max-width: 575px;
+    min-width: 440px;
+  }
+  .c-ctn.cc-75.desktop {
+    width: 100%;
+    max-width: 760px;
+    min-width: 370px;
+  }
+  .c-flex__cover {
+    width: 100%;
+    min-height: 350px;
+  }
+  .c-flex__cover.cc-white {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .c-content-holder.flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+  .c-content-holder.flex.p-btm__72 {
+    padding-bottom: 72px;
+  }
+  .c-content_wrapper {
+    width: 100%;
+    max-width: none;
+  }
+  .c-info__holder {
+    margin-left: 0;
+  }
+  .no-padding {
+    margin-top: 0;
+  }
+  .p-top__32 {
+    margin-bottom: 0;
+    padding-top: 32px;
+  }
+  .c-bg-bubble {
+    width: 300px;
+    height: 300px;
+  }
+  .c-bg-bubble.bt-left.smaller {
+    width: 180px;
+    height: 180px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .c-ctn,
+  .c-ctn.cc-70 {
+    max-width: 479px;
+    min-width: 300px;
+  }
+  .c-ctn.cc-75,
+  .c-ctn.cc-75.desktop {
+    max-width: 479px;
+    min-width: 300px;
+  }
+  .c-text__content {
+    min-width: 30ch;
+  }
+  .c-info__holder {
+    width: 85%;
+  }
+  .c-bg-bubble {
+    width: 250px;
+    height: 250px;
+  }
+  .c-bg-bubble.bt-left.smaller {
+    width: 130px;
+    height: 130px;
+  }
+}
+/*! CSS Used from: Embedded */
+* {
+  -moz-font-feature-settings: "ss01";
+  -webkit-font-feature-settings: "ss01";
+  font-feature-settings: "ss01" on;
+}
+.lineswrap {
+  overflow: hidden;
+}
+.line {
+  transform: translate3d(0%, 100%, 0) scale3d(1, 1, 1);
+  transition: transform 2s var(--ease1);
+}
+/*! CSS Used from: Embedded */
+.animate-text {
+  opacity: 1;
+  transform: translate3d(0%, 0%, 0) scale3d(1, 1, 1);
 }
